--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -103,25 +103,25 @@
                       <td width="304" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_hsbc_key_1.jpg" width="304" height="auto" alt="" style="display:block"/></td>
                       <td valign="bottom" style="font-size: 16px;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td valign="bottom" style="margin: 0; padding: 0 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size:18px; line-height: 1.1; color: #db0011;"><strong>THỎA SỨC VI VU</strong></td>
+                            <td valign="bottom" style="margin: 0; padding: 0 28px 5px 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size:18px; line-height: 1.1; color: #db0011;"><strong>THỎA SỨC VI VU</strong></td>
                           </tr>
                           <tr>
                             <td valign="middle" style="margin: 0; padding: 0; border: none; border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="15" valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Shopback</a>: <strong>Hoàn tiền</strong> <strong style="color: #db0011;">350.000 VND</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Shopback</a>: <strong>Hoàn tiền</strong> <strong style="color: #db0011;">350.000 VND</strong></td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Traveloka</a>: <strong>Giảm</strong> <strong style="color: #db0011;">50%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Traveloka</a>: <strong>Giảm</strong> <strong style="color: #db0011;">50%</strong></td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Hoàn tiền đến</strong> <strong style="color: #db0011;">10%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Hoàn tiền đến</strong> <strong style="color: #db0011;">10%</strong></td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Agoda</a>: <strong>Giảm</strong> <strong style="color: #db0011;">7%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Agoda</a>: <strong>Giảm</strong> <strong style="color: #db0011;">7%</strong></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -137,12 +137,12 @@
                     <tr>
                       <td valign="bottom" style="font-size: 16px;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td width="15" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="15" height="auto" alt="" style="display: block"/></td>
-                            <td valign="bottom" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size:18px; line-height: 1.1; color: #db0011;"><strong>SẴN SÀNG</strong><br />
+                            <td width="28" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display: block"/></td>
+                            <td valign="bottom" style="margin: 0; padding: 0 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size:18px; line-height: 1.1; color: #db0011;"><strong>SẴN SÀNG</strong><br />
                               <strong>HÀNH TRANG KHÁM PHÁ</strong></td>
                           </tr>
                           <tr>
-                            <td width="15" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="15" height="auto" alt="" style="display: block"/></td>
+                            <td width="28" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display: block"/></td>
                             <td valign="middle" style="margin: 0; padding: 0; border: none; border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="15" valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
@@ -176,7 +176,7 @@
                       <td width="304" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_hsbc_key_5.jpg" width="304" height="auto" alt="" style="display:block"/></td>
                       <td valign="top" style="font-size: 16px;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td valign="bottom" style="margin: 0; padding: 0 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size:18px; line-height: 1.1; color: #db0011;"><strong>ĐỂ CHUYẾN ĐI TRONG MƠ</strong><br />
+                            <td valign="bottom" style="margin: 0; padding: 0 28px 5px 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size:18px; line-height: 1.1; color: #db0011;"><strong>ĐỂ CHUYẾN ĐI TRONG MƠ</strong><br />
                               <strong>HAY MÓN ĐỒ YÊU THÍCH</strong><br />
                               <strong>KHÔNG CÒN LÀ DỰ ĐỊNH</strong></td>
                           </tr>
@@ -184,16 +184,16 @@
                             <td valign="middle" style="margin: 0; padding: 0; border: none; border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="15" valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Trả góp</strong> <strong style="color: #db0011;">0%</strong> lãi suất tại<br />
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Trả góp</strong> <strong style="color: #db0011;">0%</strong> lãi suất tại<br />
                                     bất kì thương hiệu bạn chọn</td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Phí chuyển đổi</strong> chỉ từ <strong style="color: #db0011;">1.99%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Phí chuyển đổi</strong> chỉ từ <strong style="color: #db0011;">1.99%</strong></td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Kỳ hạn</strong> đến <strong style="color: #db0011;">12 tháng</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Kỳ hạn</strong> đến <strong style="color: #db0011;">12 tháng</strong></td>
                                 </tr>
                               </table></td>
                           </tr>
