--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>HSBC TITLE PAGE</title>
+<title>Khởi động hè thêm hào hứng cùng HSBC!</title>
 <style type="text/css">
 .chs_body {
     font-family: Arial, Helvetica, sans-serif;
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Add the Preheader text here</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Bộ sưu tập ưu đãi từ HSBC đồng hành ghi dấu mùa hè đáng nhớ!</div>
 <table width="625" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0 auto; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
   <tr>
     <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><!--START HEADER VI -->
@@ -78,8 +78,7 @@
                     </tr>
                     <tr>
                       <td valign="top" style="padding-top:0px; font-size: 33px; color: #db0011; line-height: 40px;font-family: Arial, Helvetica, sans-serif"
-                                  align="center"><strong>Để mọi chuyến du ngoạn Hè này</strong><br />
-                        <strong>trở thành những kỷ niệm đáng giá</strong></td>
+						  align="center"><strong>Để hành trình khám phá mùa hè</strong><br /><strong>trở thành những trải nghiệm vô giá</strong></td>
                     </tr>
                     <tr>
                       <td height="28" valign="top" style="padding-top: 0px">&nbsp;</td>
@@ -109,19 +108,16 @@
                             <td valign="middle" style="margin: 0; padding: 0; border: none; border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="15" valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Shopback</a>: <strong>Hoàn tiền</strong> <strong style="color: #db0011;">350.000 VND</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://app.shopback.com/vnm/partner/hsbc" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">ShopB6ack</a>: <strong>Hoàn tiền</strong> <strong style="color: #db0011;">350.000 VND</strong><br />
+                                    tại Booking.com, Agoda, Klook, Bamboo Airways</td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Traveloka</a>: <strong>Giảm</strong> <strong style="color: #db0011;">50%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Traveloka</a>: <strong>Giảm</strong> <strong style="color: #db0011;">50%</strong> <strong>+ Giảm</strong> <strong style="color: #db0011;">100.000 VND</strong> cho đơn từ 1 triệu VND</td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Hoàn tiền đến</strong> <strong style="color: #db0011;">10%</strong></td>
-                                </tr>
-                                <tr>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Agoda</a>: <strong>Giảm</strong> <strong style="color: #db0011;">7%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://www.visa.com.vn/VI_vn/visa-offers-and-perks/bookingcom/146341" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Hoàn tiền đến</strong> <strong style="color: #db0011;">10%</strong></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -135,7 +131,7 @@
               <tr>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
-                      <td valign="bottom" style="font-size: 16px;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                      <td valign="middle" style="font-size: 16px;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td width="28" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display: block"/></td>
                             <td valign="bottom" style="margin: 0; padding: 0 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size:18px; line-height: 1.1; color: #db0011;"><strong>SẴN SÀNG</strong><br />
@@ -146,7 +142,7 @@
                             <td valign="middle" style="margin: 0; padding: 0; border: none; border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="15" valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Shopee</a>: <strong>Giảm</strong> <strong style="color: #db0011;">200.000 VND</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://shopee.vn/m/uu-dai-hsbc" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Shopee</a>: <strong>Giảm</strong> <strong style="color: #db0011;">200.000 VND</strong></td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
@@ -158,7 +154,7 @@
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Agoda</a>: <strong>Giảm</strong> <strong style="color: #db0011;">500.000 VND</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://tiki.vn/khuyen-mai/hsbc-tiki" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Tiki</a>: <strong>Giảm</strong> <strong style="color: #db0011;">500.000 VND</strong></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -208,7 +204,7 @@
               <tr>
                 <td valign="top" align="center" style="margin: 0; padding: 10px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="150" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
-                      <td height="40" align="center" valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; background-color: #db0011"><a href="#" target="_blank" style="color: #FFFFFF; text-decoration: none">Tìm hiểu thêm</a></td>
+                      <td height="40" align="center" valign="middle" style="margin: 0; padding: 0 20px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; background-color: #db0011"><a href="https://card.apply.hsbc.com.vn/tra-gop/co-phi-chuyen-doi/vn" target="_blank" style="color: #FFFFFF; text-decoration: none"><strong>Tìm hiểu thêm</strong></a></td>
                     </tr>
                   </table></td>
               </tr>
@@ -244,7 +240,7 @@
 						</td>
 						<td width="400" align="center" valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 							<tr>
-								<td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Cùng HSBC viết nên mùa hè đặc sắc của riêng bạn!</td>
+								<td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Cùng HSBC viết nên mùa hè đặc sắc của riêng bạn!</strong></td>
 							</tr>
 						</table>
 						</td>
