--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -117,7 +117,7 @@
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://www.visa.com.vn/VI_vn/visa-offers-and-perks/bookingcom/146341" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Hoàn tiền đến</strong> <strong style="color: #db0011;">10%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://www.visa.com.vn/VI_vn/visa-offers-and-perks/bookingcom/146341" title="Liên kết này có thể cho Quý khách truy cập đến trang web khác không phải của HSBC. Ngân hàng TNHH Một thành viên HSBC (Việt Nam) không có quyền kiểm soát các trang web liên kết này và không chịu trách nhiệm đối với việc kết nối của Quý khách." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Hoàn tiền</strong> đến <strong style="color: #db0011;">10%</strong></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -180,7 +180,7 @@
                             <td valign="middle" style="margin: 0; padding: 0; border: none; border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="15" valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Trả góp</strong> <strong style="color: #db0011;">0%</strong> lãi suất tại<br />
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><strong>Trả góp</strong> <strong style="color: #db0011;">0%</strong> <strong>lãi suất</strong> tại<br />
                                     bất kì thương hiệu bạn chọn</td>
                                 </tr>
                                 <tr>
@@ -275,55 +275,6 @@
                       <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                     </tr>
                   </table></td>
-                <td height="28">&nbsp;</td>
-              </tr>
-              <tr>
-                <td height="40">&nbsp;</td>
-                <td valign="top" style="margin: 0; padding: 0; border: 1px solid #dfdfdf; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">
-                    <tr style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">
-                      <td valign="top" height="20" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_warning.jpg" width="230" height="370" alt="" style="display: block;" /></td>
-                      <td width="15" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
-                      <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                          <tbody>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><strong style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Bảo mật thông tin cá nhân trước hành vi lừa đảo công nghệ </strong></td>
-                            </tr>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 5px 0 0 0; border: none; line-height: 1.3; font-size: 11px; font-family: Arial, Helvetica, sans-serif !important;">Hiện nay, tội phạm triển khai rất nhiều phương thức tiếp cận Quý khách, nhằm mục đích lừa đảo, chiếm đoạt tài sản hoặc đánh cắp thông tin tài chính và thông tin cá nhân thông qua các trang có chứa mã độc.</td>
-                            </tr>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 5px 0 0 0; border: none; line-height: 1.3; font-size: 11px; font-family: Arial, Helvetica, sans-serif !important;">Dưới đây là cách thức giúp Quý khách phòng tránh lừa đảo và bảo mật thông tin</td>
-                            </tr>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 5px 0 0 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-                                  <tr>
-                                    <td width="40" valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_1.jpg" width="30" height="25" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Luôn cẩn trọng với email, điện thoại, tin nhắn từ số lạ</td>
-                                  </tr>
-                                  <tr>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_2.jpg" width="35" height="26" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Thường xuyên kiểm tra sao kê ngân hàng</td>
-                                  </tr>
-                                  <tr>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_3.jpg" width="35" height="24" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Không chia sẻ thông tin cá nhân trừ khi có yêu cầu và Quý khách hiểu rõ mục đích của yêu cầu đó</td>
-                                  </tr>
-                                  <tr>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_4.jpg" width="35" height="34" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Tạo mật mã riêng với thông tin mà chỉ duy nhất Quý khách biết (ví dụ Không sử dụng thông tin ngày tháng năm sinh của thành viên gia đình, các ngày kỷ niệm, v.v.)</td>
-                                  </tr>
-                                </table></td>
-                            </tr>
-                          </tbody>
-                        </table></td>
-                      <td width="15" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
-                    </tr>
-                  </table></td>
-                <td height="28">&nbsp;</td>
-              </tr>
-              <tr>
-                <td height="40">&nbsp;</td>
-                <td class="chs_body" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                 <td height="28">&nbsp;</td>
               </tr>
               <tr>
