--- a/source/index_en.html
+++ b/source/index_en.html
@@ -112,11 +112,11 @@
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="This link may allow you to exit HSBC's website. HSBC assumes no liability or control for your using of this third-party website. Please refer to our Hyperlink Policy." target="_blank" style="color: #000000; text-decoration: underline">Traveloka</a>: <strong style="color: #db0011;">50%</strong> <strong>off +</strong> <strong style="color: #db0011;">VND 100.000</strong> <strong>off</strong><br />for bills from VND 1 million</td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="" title="This link may allow you to exit HSBC's website. HSBC assumes no liability or control for your using of this third-party website. Please refer to our Hyperlink Policy." target="_blank" style="color: #000000; text-decoration: underline">Traveloka</a>: <strong style="color: #db0011;">50%</strong> <strong>off +</strong> <strong style="color: #db0011;">VND 100.000</strong> <strong>off</strong> for bills from VND 1 million</td>
                                 </tr>
                                 <tr>
                                   <td valign="top" style="margin: 0; padding: 10px 0 0 5px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3;">&bull;</td>
-                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://www.visa.com.vn/en_vn/visa-offers-and-perks/bookingcom/146341" title="This link may allow you to exit HSBC's website. HSBC assumes no liability or control for your using of this third-party website. Please refer to our Hyperlink Policy." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Cash back up to</strong> <strong style="color: #db0011;">10%</strong></td>
+                                  <td valign="top" style="margin: 0; padding: 10px 28px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><a href="https://www.visa.com.vn/en_vn/visa-offers-and-perks/bookingcom/146341" title="This link may allow you to exit HSBC's website. HSBC assumes no liability or control for your using of this third-party website. Please refer to our Hyperlink Policy." target="_blank" style="color: #000000; text-decoration: underline">Booking.com</a>: <strong>Cash back</strong> up to <strong style="color: #db0011;">10%</strong></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -270,55 +270,6 @@
                       <td valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                     </tr>
                   </table></td>
-                <td height="28">&nbsp;</td>
-              </tr>
-              <tr>
-                <td height="40">&nbsp;</td>
-                <td valign="top" style="margin: 0; padding: 0; border: 1px solid #dfdfdf; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">
-                    <tr style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">
-                      <td valign="top" height="20" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_warning.jpg" width="230" height="370" alt="" style="display: block;" /></td>
-                      <td width="15" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
-                      <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                          <tbody>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><strong style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Protect yourself against cyber security fraud</strong></td>
-                            </tr>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 5px 0 0 0; border: none; line-height: 1.3; font-size: 11px; font-family: Arial, Helvetica, sans-serif !important;">Fraudsters have various approaches to trick you into making an unwanted payment, compromising your personal and/ or financial information as well as lead you to sites that could potentially be malware.</td>
-                            </tr>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 5px 0 0 0; border: none; line-height: 1.3; font-size: 11px; font-family: Arial, Helvetica, sans-serif !important;">Below are top tips to help you wise up to fraud</td>
-                            </tr>
-                            <tr style="margin: 0; padding: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">
-                              <td valign="top" style="margin: 0; padding: 5px 0 0 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-                                  <tr>
-                                    <td width="40" valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_1.jpg" width="30" height="25" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Always question uninvited approaches via emails, SMS or Voice Call</td>
-                                  </tr>
-                                  <tr>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_2.jpg" width="35" height="26" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Please review your accounts regularly</td>
-                                  </tr>
-                                  <tr>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_3.jpg" width="35" height="24" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Do not share your personal information unless required and you know the purpose behind sharing it</td>
-                                  </tr>
-                                  <tr>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_warning_icon_4.jpg" width="35" height="34" alt="" style="display: block" /></td>
-                                    <td valign="middle" style="margin: 0; padding: 5px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.3;">Please create unique passwords with information only you would know (e.g. Do not use your or family members' birthdays, anniversary dates, etc)</td>
-                                  </tr>
-                                </table></td>
-                            </tr>
-                          </tbody>
-                        </table></td>
-                      <td width="15" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
-                    </tr>
-                  </table></td>
-                <td height="28">&nbsp;</td>
-              </tr>
-              <tr>
-                <td height="40">&nbsp;</td>
-                <td class="chs_body" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                 <td height="28">&nbsp;</td>
               </tr>
               <tr>
