--- a/source/index_en.html
+++ b/source/index_en.html
@@ -188,23 +188,25 @@
                                 </tr>
                               </table></td>
                           </tr>
-                        </table></td>
-                    </tr>
-                  </table></td>
-              </tr>
-            </table></td>
-        </tr>
-		<tr>
+						  <tr>
           <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
               <tr>
-                <td valign="top" align="center" style="margin: 0; padding: 10px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="150" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                <td valign="top" align="center" style="margin: 0; padding: 30px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="150" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
-                      <td height="40" align="center" valign="middle" style="margin: 0; padding: 0 20px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; background-color: #db0011"><a href="https://card.apply.hsbc.com.vn/installment/flexible-fee/en" target="_blank" style="color: #FFFFFF; text-decoration: none"><strong>Find out more</strong></a></td>
+                      <td height="40" align="center" valign="middle" style="margin: 0; padding: 0 20px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; background-color: #db0011"><a href="https://card.apply.hsbc.com.vn/tra-gop/co-phi-chuyen-doi/vn" target="_blank" style="color: #FFFFFF; text-decoration: none"><strong>Find out more</strong></a></td>
                     </tr>
                   </table></td>
               </tr>
             </table></td>
         </tr>
+                        </table></td>
+                    </tr>
+					
+                  </table></td>
+              </tr>
+            </table></td>
+        </tr>
+		
         <tr>
           <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
               <tr>
